# bm25lib

./: .clang-format  .clang-tidy  .clangd  .coralforge.yml  .drone.yml  .gitignore  CMakeLists.txt  Makefile  vcpkg.json
containerfiles/: dev-ci
src/: bm25.cpp  bm25.hpp  lib.hpp
src/core/: ingester.cpp  ingester.hpp  ingestion.hpp  ranker.cpp  ranker.hpp  scorer.cpp  scorer.hpp  types.hpp
src/store/: adapter.hpp  in_memory.hpp  sqlite.hpp
src/utils/: string_utils.hpp
tests/: CMakeLists.txt  adapter_contract_tests.cpp  core_tests.cpp  lib_tests.cpp  perf_smoke_test.cpp  sqlite_store_tests.cpp  string_utils_test.cpp
